--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
    <style>
    body{
-    background-color:cadetblue
+
+    background-color:black;
+    
    }
    
    </style>
