--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
    <style>
    body{
-
-    background-color:black;
-    
+  background-color:black;
+    color: rgb(175, 50, 50); 
    }
    
    </style>
 </head>
 <body>
+    <nav><h1>hi</h1><h1>hi</h1></nav>
     <h1>Gili Erelboim</h1>
     <p>I Love Neomi Oyerbach</p>
 </body>
