--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    </style>
 </head>
 <body>
-    
+    <nav><h1>hi</h1><h1>hi</h1></nav>
     <h1>Gili Erelboim</h1>
     <p>I Love Neomi Oyerbach</p>
 </body>
